--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 # https://git-scm.com/docs/gitignore
 # https://help.github.com/articles/ignoring-files
 # Example .gitignore files: https://github.com/github/gitignore
+/Reykjavik, Iceland Hotels - Best Deals & Reviews   Gogobot_files/
+/Reykjavik, Iceland Hotels - Best Deals & Reviews   Gogobot.html
+/hardware-store/
+/gwd_workspace.json
+/.brackets.json
+/.gitignore
