--- a/MEAN/package.json
+++ b/MEAN/package.json
@@ -1,16 +1,19 @@
 {
   "name": "socialapp",
   "dependencies": {
+    "bcrypt": "^0.8.1",
     "body-parser": "^1.12.0",
     "express": "^4.12.2",
-    "mongoose": "^3.8.24",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
-    "gulp-uglify": "^1.1.0",
     "gulp-ng-annotate": "^0.5.2",
-    "nodemon": "^1.3.7",
+    "gulp-nodemon": "^1.0.5",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-stylus": "^2.0.1",
-    "gulp-nodemon": "^1.0.5"
+    "gulp-uglify": "^1.1.0",
+    "jwt-simple": "^0.2.0",
+    "lodash": "^3.5.0",
+    "mongoose": "^3.8.24",
+    "nodemon": "^1.3.7"
   }
 }
