--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,19 @@
 /node_modules/
 /MEAN/node_modules/
 /MEAN/mean-sample-ch7/node_modules/
+/mean-sample-ch8/node_modules/
+/MEAN/node_modules/gulp/
+/MEAN/node_modules/gulp-concat/
+/MEAN/node_modules/gulp-ng-annotate/
+/MEAN/node_modules/gulp-nodemon/
+/MEAN/node_modules/gulp-stylus/
+/MEAN/node_modules/gulp-sourcemaps/
+/MEAN/node_modules/gulp-uglify/
+/MEAN/node_modules/jwt-simple/
+/MEAN/node_modules/lodash/
+/MEAN/node_modules/mongoose/
+/MEAN/node_modules/bcrypt/
+/MEAN/node_modules/body-parser/
+/MEAN/node_modules/express/
+/MEAN/node_modules/.bin/
+/mean-sample-ch8/
