--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,9 @@
 /MEAN/node_modules/lodash/
 /MEAN/node_modules/mongoose/
 /MEAN/node_modules/bcrypt/
-/MEAN/node_modules/body-parser/
 /MEAN/node_modules/express/
 /MEAN/node_modules/.bin/
 /mean-sample-ch8/
-/MEAN/node_modules/
 /MEAN/node_modules/gulp-concat/node_modules/
 /MEAN/node_modules/gulp/node_modules/
 /MEAN/node_modules/gulp-ng-annotate/node_modules/
@@ -45,3 +43,9 @@
 /MEAN/node_modules/gulp/node_modules/tildify/
 /MEAN/node_modules/gulp/node_modules/v8flags/
 /MEAN/node_modules/gulp/node_modules/vinyl-fs/
+/MEAN/node_modules/
+/MEAN/node_modules/nodemon/
+/MEAN/node_modules/body-parser/
+/MEAN/node_modules/body-parser/node_modules/
+/MEAN/node_modules/body-parser/node_modules/content-type/package.json
+/MEAN/assets/app.js
